<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:text="@string/txtTodoTitle" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editViewTodoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:maxLines="1" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtViewTodoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:text="@string/txtTodoItem" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editViewTodoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:focusable="false" />

</LinearLayout>